add license in source

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!--
+Copyright (c) 2025 Kaoru Maeda.
+
+MIT License
+
+Original program was in C, by Eric Weeks.  Public domain.
+Please see quasi_colour.c.
+-->
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
